# QuickNote

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: release.yml
docs/: DATA_PERSISTENCE.md  ICON_GUIDE.md  TESTING.md
scripts/: create_icon.sh  quick_icon.sh  release.sh
src/: icon.html  panel.html  test.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
